# Utility

./: CMakeLists.txt  README.md
Utility/: CMakeLists.txt
Utility/include/Utility/: Math.hpp  Misc.hpp  TypeTraits.hpp
UtilityTest/: CMakeLists.txt  Test.cpp
include/Utility/: Math.hpp  Misc.hpp  TypeTraits.hpp
test/: CMakeLists.txt  Test.cpp
utility/: CMakeLists.txt
utility/include/utility/: math.hpp  misc.hpp  type_traits.hpp
utility_test/: CMakeLists.txt  test.cpp
